--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="task1.js" type="module"></script>
+    <!-- <script src="task1.js" type="module"></script> -->
+    <script src="task2.js" type="module"></script>
   </body>
 </html>
