--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <!-- <script src="task1.js" type="module"></script> -->
-    <script src="task2.js" type="module"></script>
+    <!-- <script src="task2.js" type="module"></script> -->
+    <script src="task3.js" type="module"></script>
   </body>
 </html>
